[tool.poetry]
name = "kubedownscaler"
version = "0.1.0"
description = "Scale down and restore deployments and statefulsets"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]

[tool.poetry.scripts]
script_name = 'kubedownscaler:main'

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^19.15.0"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
