[tool.poetry]
name = "kubedownscaler"
version = "0.0.0"
description = "Scale down and restore Kubernetes deployments and statefulsets"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]
readme = "README.md"
repository = "https://github.com/djjudas21/kubedownscaler"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
kubectl-downscale = 'kubedownscaler.main:main'

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "^35.0.0"
argparse = "^1.4.0"
termcolor = "^3.0.0"

[tool.poetry.dev-dependencies]
autopep8 = ">=2"
pylint = ">=3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
